--- a/app/components/jumbotron/jumbotron.component.html
+++ b/app/components/jumbotron/jumbotron.component.html
@@ -1,46 +1,1 @@
-<div class="jumbotron">
-	<div class="container">
-		<div class="col-md-6">
-		  <h1>{{jbtHeading}}</h1>
-			<h2>{{jbtSubHeading}}</h2>
-		  <p>{{jbtText}}</p>
-		</div>
-		<div class="col-md-6">
-			<h1>&nbsp;</h1>
-			<div class="panel panel-default panel-primary">
-				<div class="panel-heading">
-    			<h3 class="panel-title">Login</h3>
-  			</div>
-				<div class="panel-body">
-					<form class="form-horizontal">
-						<fieldset>
-							<div class="form-group">
-				      	<label for="inputUser" class="col-lg-4 control-label">User name</label>
-				      	<div class="col-lg-8">
-				        	<input type="text" class="form-control" id="inputUser" placeholder="Email">
-				      	</div>
-				    	</div>
-							<div class="form-group">
-				      	<label for="inputPassword" class="col-lg-4 control-label">Password</label>
-				      	<div class="col-lg-8">
-				        	<input type="password" class="form-control" id="inputPassword" placeholder="Password">
-									<div class="checkbox">
-										<label>
-											<input type="checkbox" id="inputRememberMe"> Remember me next time
-										</label>
-									</div>
-				      	</div>
-				    	</div>
-							<div class="form-group">
-								<div class="col-lg-10 col-lg-offset-4">
-									<button type="submit" class="btn btn-primary">Submit</button>
-								</div>
-							</div>
-						</fieldset>
-					</form>
-				</div>
-			</div>
-
-		</div>
-  </div>
-</div>
+JUMBOTRON
