--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-/* Padding require to allow content not being overlaped by the navbar */
-body { padding-top: 70px; }
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.Absolute-Center.is-Responsive {
+  width: 50%;
+  height: 50%;
+  min-width: 200px;
+  max-width: 400px;
+  padding: 10px;
+}
